--- a/application/templates/report.html
+++ b/application/templates/report.html
@@ -457,6 +457,7 @@
 						</div>
 						<div class="card-body">
 							<center>
+								<div id='chartFP' class='chartFP'></div>
 								<div id="waveformFilledPauses">
                     				<div class="progress progress-striped active" id="progress-bar">
                         				<div class="progress-bar progress-bar-info"></div>
@@ -524,6 +525,8 @@
   Plotly.plot('chartVolume',graphVolume,{},{responsive: true});
   var graphArticulation = {{graphJSONArticulation | safe}};
   Plotly.plot('chartArticulation',graphArticulation,{},{responsive: true});
+  var graphFP = {{graphJSONFP| safe}};
+  Plotly.plot('chartFP',graphFP,{},{responsive: true});
 
 </script>
 
