--- a/application/templates/report.html
+++ b/application/templates/report.html
@@ -597,6 +597,11 @@
                   var groupsPosture = new vis.DataSet([
                     {id: 0, content: 'Posture', value: 1},
                   ]);
+                  var groupsSlides = new vis.DataSet([
+                    {id: 0, content: 'Font Size', value: 1},
+                    {id: 1, content: 'Text Length', value: 2},
+
+                  ]);
 
                   var options = {
                     showMajorLabels: false,
