--- a/application/templates/reports.html
+++ b/application/templates/reports.html
@@ -69,7 +69,7 @@ var printIcon = function(cell, formatterParams){ //plain text value
 };
 
 //Build Tabulator
-var table = new Tabulator("#example-table", {
+var table = new Tabulator("#reports-table", {
     height:"311px",
     layout:"fitColumns",
     rowFormatter:function(row){
