--- a/application/templates/reports.html
+++ b/application/templates/reports.html
@@ -68,9 +68,18 @@ var printIcon = function(cell, formatterParams){ //plain text value
     return "<i class='fa fa-print'></i>";
 };
 
+var tabledata = [
+		{id:1, name:"Oli Bob", age:"12", col:"red", dob:"12/08/2017"},
+		{id:2, name:"Mary May", age:"1", col:"blue", dob:"14/05/1982"},
+		{id:3, name:"Christine Lobowski", age:"42", col:"green", dob:"22/05/1982"},
+		{id:4, name:"Brendon Philips", age:"125", col:"orange", dob:"01/08/1980"},
+		{id:5, name:"Margret Marmajuke", age:"16", col:"yellow", dob:"31/01/1999"},
+	];
+
 //Build Tabulator
 var table = new Tabulator("#reports-table", {
     height:"311px",
+    data:tabledata,
     layout:"fitColumns",
     rowFormatter:function(row){
         if(row.getData().col == "blue"){
