--- a/application/templates/reports.html
+++ b/application/templates/reports.html
@@ -84,7 +84,7 @@ var table = new Tabulator("#reports-table", {
     columns:[
     {formatter:"rownum", hozAlign:"center", width:40},
     {formatter:printIcon, width:40, hozAlign:"center", cellClick:function(e, cell){alert("Printing row data for: " + cell.getRow().getData().name)}},
-    {title:"Name", field:"name", width:150, formatter:function(cell, formatterParams){
+    {title:"Date", field:"date", width:150, formatter:function(cell, formatterParams){
        var value = cell.getValue();
         if(value.indexOf("o") > 0){
             return "<span style='color:#3FB449; font-weight:bold;'>" + value + "</span>";
@@ -92,12 +92,10 @@ var table = new Tabulator("#reports-table", {
             return value;
         }
     }},
-    {title:"Progress", field:"progress", formatter:"progress", formatterParams:{color:["#00dd00", "orange", "rgb(255,0,0)"]}, sorter:"number", width:100},
-    {title:"Rating", field:"rating", formatter:"star", formatterParams:{stars:6}, hozAlign:"center", width:120},
-    {title:"Driver", field:"car", hozAlign:"center", formatter:"tickCross", width:50},
-    {title:"Col", field:"col" ,formatter:"color", width:50},
-    {title:"Line Wraping", field:"lorem" ,formatter:"textarea"},
-    {formatter:"buttonCross", width:30, hozAlign:"center"}
+    {title:"Posture Score", field:"posture", formatter:"star", formatterParams:{stars:5}, hozAlign:"center", width:120},
+    {title:"Gaze Score", field:"gaze", formatter:"star", formatterParams:{stars:5}, hozAlign:"center", width:120},
+    {title:"Volume Score", field:"volume", formatter:"star", formatterParams:{stars:5}, hozAlign:"center", width:120},
+    {title:"Articulation Score", field:"speed", formatter:"star", formatterParams:{stars:5}, hozAlign:"center", width:120},
     ],
 });
 </script>
