--- a/application/templates/reports.html
+++ b/application/templates/reports.html
@@ -65,7 +65,7 @@
 <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.1.8/dist/js/tabulator.min.js"></script>
 <script>
 var printIcon = function(cell, formatterParams){ //plain text value
-    return "<i class='fa fa-print'></i>";
+    return "<a href='/view_report/"+cell.getRow().getData().presId+">View Report</a>";
 };
 
 var tabledata = {{data | tojson}};
@@ -75,7 +75,7 @@ console.log(tabledata);
 var table = new Tabulator("#reports-table", {
     height:"311px",
     data:tabledata,
-    layout:"fitColumns",
+    layout:"fitDataTable",
     rowFormatter:function(row){
         if(row.getData().col == "blue"){
             row.getElement().style.backgroundColor = "#1e3b20";
