--- a/application/templates/report.html
+++ b/application/templates/report.html
@@ -228,7 +228,7 @@
 								<h5 class="m-b-10">{{ name }} - Report</h5>
 							</div>
 							<ul class="breadcrumb">
-								<li class="breadcrumb-item"><a href="#!">Report</a></li>
+								<li class="breadcrumb-item"><a href="#!">Results of the Presentation Analysis</a></li>
 							</ul>
 						</div>
 					</div>
