--- a/application/templates/reports.html
+++ b/application/templates/reports.html
@@ -20,7 +20,7 @@
 								<h5 class="m-b-10">{{ name }} - Reports</h5>
 							</div>
 							<ul class="breadcrumb">
-								<li class="breadcrumb-item"><a href="#!">Dashboard</a></li>
+								<li class="breadcrumb-item"><a href="#!">List of Reports</a></li>
 							</ul>
 						</div>
 					</div>
