--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -46,10 +46,7 @@
 							</div>
 						</div>
 						<div class="card-body">
-							<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-								aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-								officia deserunt mollit anim id est laborum."
-							</p>
+							<div id='chartDashboard' class='chartDashboard'></div>
 						</div>
 					</div>
 				</div>
@@ -63,4 +60,10 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script type='text/javascript'>
+  var graphDashboard = {{graphJSON | safe}};
+  Plotly.plot('chartDashboard',graphDashboard,{},{responsive: true});
+
+</script>
+{% endblock javascripts %}
