--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -61,6 +61,7 @@
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
+<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script type='text/javascript'>
   var graphDashboard = {{graphJSON | safe}};
   Plotly.plot('chartDashboard',graphDashboard,{},{responsive: true});
