--- a/application/templates/includes/sidebar.html
+++ b/application/templates/includes/sidebar.html
@@ -32,6 +32,11 @@
 						   <i class="feather icon-log-out"></i></span><span class="pcoded-mtext">Logout</span></a>
 					</li>
 					<li class="nav-item">
+					    <a href="{{ url_for('main.controls') }}"
+						   class="nav-link "><span class="pcoded-micon">
+						   <i class="feather icon-log-out"></i></span><span class="pcoded-mtext">Hardware Controls</span></a>
+					</li>
+					<li class="nav-item">
 					    <a target="_blank" rel="noopener" href="https://wp.nyu.edu/augment_ed/"
 						   class="nav-link "><span class="pcoded-micon">
 						   <i class="feather icon-info"></i></span><span class="pcoded-mtext">Support</span></a>
