--- a/application/templates/controls.html
+++ b/application/templates/controls.html
@@ -50,7 +50,12 @@
 						<div class="card-body">
 							<button onclick="window.location.href='/reboot'">Reboot</button>
 							<br/>
+							<br/>
 							<button onclick="window.location.href='/shutdown'">Shutdown</button>
+							<br/>
+							<br/>
+							<button onclick="window.location.href='/update'">Update</button>
+
 						</div>
 					</div>
 				</div>
