--- a/application/templates/includes/sidebar.html
+++ b/application/templates/includes/sidebar.html
@@ -34,7 +34,7 @@
 					<li class="nav-item">
 					    <a href="{{ url_for('main.controls') }}"
 						   class="nav-link "><span class="pcoded-micon">
-						   <i class="feather icon-log-out"></i></span><span class="pcoded-mtext">Hardware Controls</span></a>
+						   <i class="feather icon-sliders"></i></span><span class="pcoded-mtext">Hardware Controls</span></a>
 					</li>
 					<li class="nav-item">
 					    <a target="_blank" rel="noopener" href="https://wp.nyu.edu/augment_ed/"
