--- a/application/templates/report.html
+++ b/application/templates/report.html
@@ -212,6 +212,8 @@
       }
       </style>
 
+
+
 {% endblock stylesheets %}
 
 {% block content %}
@@ -641,9 +643,9 @@
 
                 </script>
 
-<script src="https://unpkg.com/wavesurfer.js/dist/wavesurfer.js"></script>
-<script src="https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.timeline.js"></script>
-<script src="https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.regions.js"></script>
+<script src="static/assets/js/wavesurfer.js"></script>
+<script src="static/assets/js/timeline.js"></script>
+<script src="static/assets/js/regions.js"></script>
 <script>
 var wavesurferV;
 var wavesurferA;
